fix spacings in mullet.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,12 +490,12 @@ section h1 {
 
 /* ---------------------------------- Recipes (recipe pages) */
 .recipe-hero {
-    height: 1250px;
+    height: 1210px;
 }
 
 #recipe-container {
     width: 70%;
-    height: 1150px;
+    height: 1110px;
     margin: 0 auto;
     margin-top: 50px;
     background-color: rgba(0, 0, 0, .7);
@@ -507,15 +507,16 @@ section h1 {
 
 #recipe-container h1, h3 {
     font-family: Lobster, sans-serif;
+    padding-bottom: 8px;
 }
 
 .recipe-info {
-    margin: 50px;
+    margin: 30px 0 30px 50px;
 }
 
 .ingredients, .steps {
     text-align: left;
-    margin: 0 50px 50px 50px;
+    margin: 0 50px 30px 50px;
 }
 
 #recipe-container li {
